# happyrobot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py  state_vocab.py
app/api/: routes.py
app/db/: base.py  seed.py  session.py
app/models/: call_session.py  carrier_check.py  load.py  negotiation_event.py
app/schemas/: calls.py  carriers.py  dashboard.py  loads.py  metrics.py  negotiation.py
app/services/: calls.py  common.py  dashboard.py  dashboard_tones.py  fmcsa.py  loads.py  metrics.py  negotiation.py
app/static/dashboard/: index.html  login.html
app/static/dashboard/assets/: dashboard-login.js  dashboard.css  dashboard.js
data/: loads.json
scripts/: populate_dashboard.py
tests/: conftest.py  test_api.py  test_populate_dashboard.py
